# memer

./: .gitignore  Cargo.toml  README.md  subs.json
.cargo/: config.toml
src/: channel_id.rs  commands.rs  common.rs  data.rs  db.rs  error.rs  main.rs  result.rs  serde.rs  setup.rs  utils.rs
src/commands/: admin.rs
