[package]
name = "memer"
version = "0.1.0"
edition = "2021"
description = "Discord meme bot"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/memer"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bot"]

[features]
default = []

[dependencies]
poise = "0.2.1"
tracing = "0.1.34"
anyhow = "1.0.57"
dotenv = { version = "0.15.0", optional = true }
roux = "1.3.11"
mongodb = "2.2.1"
serde = { version = "1.0.137", features = ["derive"] }
dashmap = { version = "5.3.3", features = ["rayon"] }

[dependencies.tokio]
version = "1.18.2"
features = ["rt-multi-thread", "macros", "signal", "parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["std", "env-filter", "fmt", "ansi", "smallvec", "parking_lot"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
