[package]
name = "memer"
version = "0.1.0"
edition = "2021"
description = "Discord meme bot"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/memer"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bot"]

[features]
default = []

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
dashmap = "5.3.3"
dotenv = { version = "0.15.0", optional = true }
governor = "0.4.2"
humantime = "2.1.0"
mongodb = "2.2.1"
once_cell = { version = "1.12.0", features = ["parking_lot"] }
poise = "0.2.1"
roux = "1.3.11"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.34"

[dependencies.tokio]
version = "1.18.2"
features = ["rt-multi-thread", "macros", "signal", "parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["std", "env-filter", "fmt", "ansi", "smallvec", "parking_lot"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
